@@ -1,3 +1,7 @@
+Tue Jul 29 00:31:04 CEST 2008 Christian Anthon <anthon@kiku.dk>
+
+	* gtktheory.c: port to gtk_tree_view
+
 Thu Jul 24 14:32:45 CEST 2008 Christian Anthon <anthon@kiku.dk>
 
 	* gtkrelational.c, gtkrace.c: cleanup of deprecated gtk functions
